src/main/kotlin/com/example/kweb/error/model/ErrorName.kt
package com.example.kweb.error.model

object ErrorName {
    const val INVALID_ARGUMENT = "invalid_argument"
    const val NOT_FOUND = "not_found"

    const val INTERNAL_SERVER_ERROR = "internal_server_error"
}
